Wrote integration tests for patch and fixed minor bugs